# SecurePassManager

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.h.in  install-dependencies.ps1  setup.bat  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  Doxyfile.in  ROADMAP.md  crypto-design.md  security-audits.md  security-faq.md  threat-model.md
include/: aes_gcm.h  authenticator.h  cli.h  compression.h  database.h  encryption.h  enhanced_security.h  kdf_argon2.h  password_generator.h  password_strength.h  passwordmanager.h  secure_memory.h
src/: aes_gcm.cpp  authenticator.cpp  cli.cpp  compression.cpp  database.cpp  encryption.cpp  enhanced_security.cpp  kdf_argon2.cpp  main.cpp  password_generator.cpp  password_strength.cpp  passwordmanager.cpp  secure_memory.cpp
test/: enhanced_security_test.cpp
